finish post comments section

--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,125 @@
 
                             <!-- Add .show -->
                             <div class="post-comments show">
-                                Post comments
+                                <div class="comments-container">
+                                    <div class="comment">
+                                        <div class="user-avatar rounded-img">
+                                            <img
+                                                src="assets/accounts/avatar5.jpg"
+                                            />
+                                        </div>
+                                        <div class="comment-content">
+                                            <div class="comment-message">
+                                                <a class="username" href="#"
+                                                    >Bird</a
+                                                ><span class="">
+                                                    Lorem ipsum, dolor sit amet
+                                                    consectetur adipisicing
+                                                    elit. Soluta, temporibus,
+                                                    eius culpa doloribus
+                                                    explicabo repellat magnam
+                                                    quae nisi voluptas porro
+                                                </span>
+                                            </div>
+                                            <div class="comment-reactions">
+                                                <a
+                                                    class="comment-reaction"
+                                                    href="#"
+                                                    >Like</a
+                                                >
+                                                <span>·</span>
+                                                <a
+                                                    class="comment-reaction"
+                                                    href="#"
+                                                    >Reply</a
+                                                >
+                                                <span>·</span>
+                                                <a
+                                                    class="comment-reaction comment-time"
+                                                    href="#"
+                                                    >30m</a
+                                                >
+                                            </div>
+                                            <div class="comment-replies">
+                                                <div class="comment">
+                                                    <div
+                                                        class="user-avatar in-reply rounded-img"
+                                                    >
+                                                        <img
+                                                            src="assets/accounts/avatar4.jpg"
+                                                        />
+                                                    </div>
+                                                    <div
+                                                        class="comment-content"
+                                                    >
+                                                        <div
+                                                            class="comment-message"
+                                                        >
+                                                            <a
+                                                                class="username"
+                                                                href="#"
+                                                                >Elephant</a
+                                                            ><span class="">
+                                                                Lorem ipsum,
+                                                                dolor sit amet
+                                                                consectetur
+                                                                adipisicing?
+                                                            </span>
+                                                        </div>
+                                                        <div
+                                                            class="comment-reactions"
+                                                        >
+                                                            <a
+                                                                class="comment-reaction"
+                                                                href="#"
+                                                                >Like</a
+                                                            >
+                                                            <span>·</span>
+                                                            <a
+                                                                class="comment-reaction"
+                                                                href="#"
+                                                                >Reply</a
+                                                            >
+                                                            <span>·</span>
+                                                            <a
+                                                                class="comment-reaction comment-time"
+                                                                href="#"
+                                                                >30m</a
+                                                            >
+                                                        </div>
+                                                        <div
+                                                            class="comment-replies"
+                                                        ></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="comment-box">
+                                    <div class="user-avatar rounded-img">
+                                        <img src="assets/user-avatar.png" />
+                                    </div>
+                                    <input
+                                        class="comment-composer"
+                                        type="text"
+                                        placeholder="Write a comment..."
+                                    />
+                                    <div class="comment-insert">
+                                        <span
+                                            class="composer-icon composer-icon-emoji clickable"
+                                        ></span>
+                                        <span
+                                            class="composer-icon composer-icon-photo clickable"
+                                        ></span>
+                                        <span
+                                            class="composer-icon composer-icon-gif clickable"
+                                        ></span>
+                                        <span
+                                            class="composer-icon composer-icon-sticker clickable"
+                                        ></span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
