enable toggling components

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="nav-bar-menu-item">
                             <span
                                 id="friend-requests-menu"
-                                class="nav-button nav-icon nav-icon-friends clickable popover show"
+                                class="nav-button nav-icon nav-icon-friends clickable popover"
                             >
                                 <div class="popover-body">
                                     <div class="card no-border">
@@ -305,7 +305,7 @@
                         class="setting-button messenger-icon messenger-icon-create-groups clickable"
                     ></span>
                 </section>
-                <section id="messenger-bar" class="show">
+                <section id="messenger-bar" class="">
                     <div class="contact-group">
                         <div class="contact-header">Contacts</div>
                         <div class="contacts-container">
@@ -732,7 +732,7 @@
                         </div>
                     </div>
                 </section>
-                <div id="messenger-bar-settings" class="show">
+                <div id="messenger-bar-settings">
                     <span class="messenger-icon messenger-icon-search"></span>
                     <input
                         type="text"
@@ -1111,11 +1111,11 @@
                     </div>
                 </section>
                 <section id="newsfeed">
-                    <!-- Add .showw -->
-                    <div class="new-post-backdrop"></div>
+                    <!-- Add .show -->
+                    <div id="new-post-backdrop"></div>
 
                     <!-- add .expanded -->
-                    <div class="new-post card">
+                    <div id="new-post" class="card">
                         <div class="card-header">
                             <span>Create post</span>
                             <span
